--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Object::Pluggable
 =========================
 
-1.28
+1.28  Sat Oct 2 12:06:47 GMT 2010
+    - Require Pod::Parser 1.36 to avoid test failures due to =encoding utf8
+
+1.27  Tue Sep 28 19:31:45 2010 +0000
     - Allow arguments to be passed to plugins' register/unregister methods
     - Localize $@ before we eval
     - Let subclasses and plugins add new event arguments in their handlers
