--- a/README
+++ b/README
@@ -292,7 +292,7 @@ PUBLIC METHODS
     initialized, "undef"/an empty list if not.
 
   "plugin_del"
-    Accepts one argument:
+    Accepts the following arguments:
 
      The alias for the plugin or the plugin object itself
      Any number of extra arguments
@@ -304,7 +304,7 @@ PUBLIC METHODS
     list if not.
 
   "plugin_get"
-    Accepts one argument:
+    Accepts the following arguments:
 
      The alias for the plugin
 
